header image fix, font improvements, spacing, etc.

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -22,15 +22,17 @@ h1, h2, h3, .site-title {
     font-size: 32pt !important;
 }
 
-// Target the description/date text below the title
+// Menu
 #site-head-content .site-menu {
     font-family: 'Nunito', sans-serif !important;
-    // font-weight: 400;
-    // font-size: 40pt !important;
+    font-weight: 400;
+    font-size: 18pt !important;
+    margin-right: 14px !important;
 }
 
 // If you have a "scroll down" button/link in the header
 .fixed-nav {
     font-family: 'Nunito', sans-serif !important;
     font-weight: 400;
+    font-size: 14pt !important;
 }
